Bug 111328 - [CI][SHARDS]igt@gem_exec_params@invalid-bsd-ring - fail - Failed assertion: __gem_execbuf(fd, &execbuf) == -22
Summary: [CI][SHARDS]igt@gem_exec_params@invalid-bsd-ring - fail - Failed assertion: _...
Status: RESOLVED FIXED
Alias: None
Product: DRI
Classification: Unclassified
Component: DRM/Intel (show other bugs)
Version: DRI git
Hardware: Other All
: high normal
Assignee: Intel GFX Bugs mailing list
QA Contact: Intel GFX Bugs mailing list
URL:
Whiteboard: ReadyForDev
Keywords:
Depends on:
Blocks:
 
Reported: 2019-08-08 08:16 UTC by Lakshmi
Modified: 2019-08-08 15:12 UTC (History)
1 user (show)

See Also:
i915 platform: ICL
i915 features: GEM/Other


Attachments

Description Lakshmi 2019-08-08 08:16:55 UTC
https://intel-gfx-ci.01.org/tree/drm-tip/CI_DRM_6648/shard-iclb2/igt@gem_exec_params@invalid-bsd-ring.html
Starting subtest: invalid-bsd-ring
(gem_exec_params:1086) CRITICAL: Test assertion failure function __real_main202, file ../tests/i915/gem_exec_params.c:278:
(gem_exec_params:1086) CRITICAL: Failed assertion: __gem_execbuf(fd, &execbuf) == -22
(gem_exec_params:1086) CRITICAL: error: 0 != -22
Subtest invalid-bsd-ring failed.
**** DEBUG ****
(gem_exec_params:1086) DEBUG: Test requirement passed: gem_has_bsd2(fd)
(gem_exec_params:1086) CRITICAL: Test assertion failure function __real_main202, file ../tests/i915/gem_exec_params.c:278:
(gem_exec_params:1086) CRITICAL: Failed assertion: __gem_execbuf(fd, &execbuf) == -22
(gem_exec_params:1086) CRITICAL: error: 0 != -22
(gem_exec_params:1086) igt_core-INFO: Stack trace:
(gem_exec_params:1086) igt_core-INFO:   #0 ../lib/igt_core.c:1674 __igt_fail_assert()
(gem_exec_params:1086) igt_core-INFO:   #1 ../tests/i915/gem_exec_params.c:276 __real_main202()
(gem_exec_params:1086) igt_core-INFO:   #2 [<unknown>+0xfa2a35b0]
****  END  ****
Subtest invalid-bsd-ring: FAIL (0.012s)
Comment 2 Chris Wilson 2019-08-08 15:12:36 UTC
commit f1c4d157ab9b13c1228f3b8ad7747126785460d0 (HEAD -> drm-intel-next-queued, drm-intel/for-linux-next, drm-intel/drm-intel-next-queued)
Author: Chris Wilson <chris@chris-wilson.co.uk>
Date:   Thu Aug 8 12:06:12 2019 +0100

    drm/i915: Fix up the inverse mapping for default ctx->engines[]
    
    The order in which we store the engines inside default_engines() for the
    legacy ctx->engines[] has to match the legacy I915_EXEC_RING selector
    mapping in execbuf::user_map. If we present VCS2 as being the second
    instance of the video engine, legacy userspace calls that I915_EXEC_BSD2
    and so we need to insert it into the second video slot.
    
    v2: Record the legacy mapping (hopefully we can remove this need in the
    future)
    
    Bugzilla: https://bugs.freedesktop.org/show_bug.cgi?id=111328
    Fixes: 2edda80db3d0 ("drm/i915: Rename engines to match their user interface")
    Signed-off-by: Chris Wilson <chris@chris-wilson.co.uk>
    Cc: Mika Kuoppala <mika.kuoppala@linux.intel.com>
    Reviewed-by: Mika Kuoppala <mika.kuoppala@linux.intel.com> #v1
    Reviewed-by: Mika Kuoppala <mika.kuoppala@linux.intel.com>
    Link: https://patchwork.freedesktop.org/patch/msgid/20190808110612.23539-2-chris@chris-wilson.co.uk


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.